force-app/main/default/objects/Registration__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <formula>Account__r.PersonEmail</formula>
    <label>ContactEmail</label>
    <type>Text</type>
</CustomField>