force-app/main/default/objects/Registration__c/fields/ErpOrder__c.field-meta.xml
<CustomField>
    <fullName>ErpOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ErpOrder</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>