force-app/main/default/objects/Registration__c/fields/Partner_Memory_Maker__c.field-meta.xml
<CustomField>
    <fullName>Partner_Memory_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Memory Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>