force-app/main/default/objects/Registration__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(SerialNumber__r.GMBLASERP__Product__r.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>