force-app/main/default/objects/Registration__c/fields/ProductMake__c.field-meta.xml
<CustomField>
    <fullName>ProductMake__c</fullName>
    <formula>SerialNumber__r.GMBLASERP__Product__r.Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductMake</label>
    <type>Text</type>
</CustomField>