force-app/main/default/objects/Registration__c/fields/Serial_Number_Reference__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Reference__c</fullName>
    <formula>SerialNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number Reference</label>
    <type>Text</type>
</CustomField>