force-app/main/default/objects/Registration__c/fields/Uniqueifier__c.field-meta.xml
<CustomField>
    <fullName>Uniqueifier__c</fullName>
    <label>Uniqueifier</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>