force-app/main/default/objects/Registration__c/validationRules/Account_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Account__c)</errorConditionFormula>
    <errorMessage>Account is required.</errorMessage>
</ValidationRule>