force-app/main/default/objects/Registration__c/validationRules/Serial_number_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_number_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(SerialNumber__c)</errorConditionFormula>
    <errorMessage>Serial number is required</errorMessage>
</ValidationRule>