force-app/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registered_Date__c</columns>
    <columns>RegisteredByAccount__c</columns>
    <columns>Account__c</columns>
    <columns>Product_Name__c</columns>
    <columns>SerialNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>